k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ancient-games-service
  labels:
    app: ancient-games
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: ancient-games
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
